исправления после ревью

--- a/.eslintrc
+++ b/.eslintrc
@@ -31,5 +31,10 @@
         "@typescript-eslint/no-var-requires": ["off"]
       }
     }
-  ]
+  ],
+  "settings": {
+      "react": {
+        "version": "detect"
+      }
+  }
 }
