--- a/package.json
+++ b/package.json
@@ -2,24 +2,7 @@
   "name": "otus-react-homework",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack --mode production --node-env=production",
-    "start": "webpack serve --mode=development --node-env=development",
-    "lint": "eslint --ext .ts,.tsx --fix ./",
-    "test": "jest",
-    "test:loki": "loki test",
-    "check": "npm test && npm run lint",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "prepare": "husky install"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run check",
-      "pre-push": "npm run check"
-    }
-  },
+  "main": "index.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/artem-volirvag/otus-react"
@@ -29,12 +12,33 @@
   "bugs": {
     "url": "https://github.com/artem-volirvag/otus-react/issues"
   },
-  "homepage": "https://github.com/artem-volirvag/otus-react#readme",
+  "homepage": "https://artem-volirvag.github.io/otus-react",
+  "scripts": {
+    "build": "webpack --mode production --node-env=production",
+    "start": "webpack serve --mode=development --node-env=development",
+    "lint": "eslint --ext .ts,.tsx --fix ./",
+    "test": "jest",
+    "test:loki": "loki test",
+    "check": "npm test && npm run lint",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "chromatic": "chromatic --project-token d86bf5e6f450",
+    "prepare": "husky install",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run check",
+      "pre-push": "npm run check"
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "gh-pages": "^3.2.3",
     "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
@@ -49,6 +53,7 @@
     "@typescript-eslint/parser": "^5.1.0",
     "babel-jest": "^27.3.0",
     "babel-loader": "^8.2.2",
+    "chromatic": "^6.0.6",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
