--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+        with:
+        fetch-depth: 0 # 👈 Required to retrieve git history
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
