--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,6 @@ jobs:
           # 👇 Chromatic projectToken, refer to the manage page to obtain it.
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
 
+      - run: git config user.email ${{ secrets.MY_EMAIL }}
+      - run: git config user.name ${{ secrets.MY_GIT_NAME }}
       - run: npm run deploy
