--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
+  },
+  "dependencies": {
+    "ramda": "^0.27.1"
   }
 }
