--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "webpack --mode production --node-env=production",
     "start": "webpack serve --mode=development --node-env=development",
     "lint": "eslint --ext .ts,.tsx --fix ./",
-    "test": "jest --coverage",
+    "test": "jest --coverage --silent=false",
     "test:loki": "loki test",
     "check": "npm test && npm run lint",
     "storybook": "start-storybook -p 6006",
@@ -46,6 +46,7 @@
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.22",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "babel-jest": "^27.4.5",
@@ -62,6 +63,7 @@
     "jest": "^27.4.5",
     "loki": "^0.28.1",
     "prettier": "^2.5.1",
+    "redux-saga-test-plan": "^4.0.4",
     "typescript": "^4.5.4",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
@@ -75,7 +77,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "redux-saga": "^1.1.3"
   },
   "loki": {
     "configurations": {
